# ShotSeek

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: demo-script.md  deployment.md  evaluation.md  m0-contract.md  m2-agentic-retrieval.md  m3-runtime-contract.md  ten-day-talk.md
eval/: m1_queries.jsonl  m1a_boundary_annotations.json  m2_queries.jsonl
samples/: README.md
scripts/: build_competition_report.py  build_longform_sample.py  check_repository_hygiene.py  prepare_golden_sample.py  run_benchmark.py  run_m0_probe.py  run_m1a.py  run_m1b.py  run_m1c.py  run_m2_evaluation.py  run_m2a_planner.py  run_m2b_verifier.py  run_runtime_job.py  serve_api.py  update_m0_fixtures.py  update_m2_planner_fixture.py  update_m2_verifier_fixture.py  verify_m0_completion.py  verify_m1_completion.py  verify_m1a.py  verify_m1b.py  verify_m1c.py  verify_m2_completion.py  verify_m2a.py
shotseek/: __init__.py  __main__.py  agent.py  api.py  cli.py  doctor.py  fixtures.py  m0.py  m0_verify.py  m1_verify.py  m1a.py  m1b.py  m1c.py  m2_verify.py  m2a.py  m2b.py  schemas.py
tests/: test_asr_sse.py  test_benchmark.py  test_competition_report.py  test_delivery_export.py  test_doctor.py  test_fixture_sanitizer.py  test_fixtures.py  test_http_retry.py  test_longform_sample.py  test_m0_fixture.py  test_m0_verify.py  test_m1_verify.py  test_m1a.py  test_m1b.py  test_m1c.py  test_m2_agent.py  test_m2_api.py  test_m2_evaluation.py  test_m2_planning.py  test_m2_retrieval.py  test_m2_stepfun_verifier.py  test_m2_verify.py  test_media_probe.py  test_providers.py  test_runtime_api.py  (+7 more)
(+94 files in other folders)
