[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "shotseek"
version = "0.3.0"
description = "Evidence-aligned timeline retrieval for long-form video"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
competition = [
  "reportlab>=4.2,<5",
  "pypdf>=5,<7",
]

[project.scripts]
shotseek = "shotseek.cli:main"
shotseek-runtime = "shotseek.runtime.server:main"

[tool.setuptools.packages.find]
include = ["shotseek*"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]
